--- a/index.html
+++ b/index.html
@@ -18,49 +18,8 @@
     
 <body>
     <h1>Sarah's Stuff and Nonsense</h1>
-    <!--bootstrap carousel
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/Doug1.jpg" class="d-block w-100" alt="Beautiful Doug the Dog">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Doug</h5>
-              <p>My ancient collie cross - 82 in human years!</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/TwoDogs.jpg" class="d-block w-100" alt="Two sheepdogs">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Doug and His Nemesis</h5>
-              <p>Odie the puppy terrorises Doug at least once a week.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/bluebells.jpg" class="d-block w-100" alt="Collie in bluebells">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Bluebell Season</h5>
-              <p>Doug showing off his modelling skills in the woods.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      end of bootstrap carousel-->
-
-   
-    <p class="prettybackground">Hello, World!</p>
+    <p class="prettybackground">Ilkley-based software engineer. This is my playground for personal projects.</p>
+    
 
 </body>
 <footer>
